<resources>
    <string name="app_name">GeoFauna</string>
    <string name="tituloAplicacion">Muestreo de Fauna Salvaje</string>
    <string name="btnResumen">Resumen</string>
    <string name="btnAñadir">Añadir avistamiento</string>
    <string name="btnEstadisticas">Estadísticas</string>
    <string name="avistamientoTitulo">Registrar Avistamiento</string>
    <string name="tvEspecie">Especie:</string>
    <string name="tvHora">Hora:</string>
    <string name="tvFecha">Fecha:</string>
    <string name="tvLatitud">Latitud:</string>
    <string name="tvLongitud">Longitud: </string>
    <string name="tvHumidity">Humedad (%):</string>
    <string name="tvAltitude">Altitud (m):</string>
    <string name="tvTemperature">Temperatura (ºC):</string>
    <string name="tvUv">Índice UV:</string>
    <string name="tvPressure">Presión (hPa):</string>
    <string name="etEspecie">Nombre de la especie</string>
    <string name="etLongitud">Longitud</string>
    <string name="etLatitud">Latitud</string>
    <string name="etHora">Hora</string>
    <string name="etMinuto">Minuto</string>
    <string name="etDia">Día</string>
    <string name="etMes">Mes</string>
    <string name="etAño">Año</string>
    <string name="etHumidity">Humedad (%)</string>
    <string name="etAltitude">Altitud </string>
    <string name="etTemperature">Temperatura (ºC)</string>
    <string name="etUv">Indice UV</string>
    <string name="etPressure">Presión (hPa)</string>
    <string name="btnAñadirAvistamiento">Añadir avistamiento</string>
    <string name="tvPais">"País: "</string>
    <string name="tvLugar">"Lugar: "</string>
    <string name="btnAutocompletar">Autocompletar</string>
    <string name="etPais">País</string>
    <string name="etLugar">Lugar</string>
    <string name="apagadoGPSMensaje"> No se ha encontrado información GPS. Intentelo más tarde.</string>
    <string name="apagadoGPSTitulo">Aviso GPS</string>
    <string name="cerrarAlertBoton">Cerrar</string>
    <string name="permisosDenegadosTitulo">Permisos revocados</string>
    <string name="permisosDenegadosDescripcion">Esta aplicación necesita permisos de ubicación e internet para así acceder al gps, en caso de que sea necesario</string>
    <string name="tvEspecieTitulo">Especie</string>
    <string name="tvLongitudTitulo">Longitud</string>
    <string name="tvLatitudTitulo">Latitud</string>
    <string name="tvHoraTitulo">Hora</string>
    <string name="tvDiaTitulo">Día</string>
    <string name="bluetoothMenu">Bluetooth </string>
    <string name="exportarMenu">Exportar...</string>
    <string name="aboutMenu">Saber mas</string>
    <string name="btnEditAnimal">Editar entrada de animal</string>
    <string name="btnEditar">Editar</string>
    <string name="btnBorrar">Borrar</string>
    <string name="bluetoothDenegadoTitulo">Bluetooth denegado</string>
    <string name="bluetoothDenegadoDescripcion">Enciende el Bluetooth, si quiere usar el medidor ambiental.</string>
    <string name="tvBluetoothScanTitulo">Buscando dispositivos Bluetooth</string>
    <string name="tvBluetoothScanTituloAlternativo">Problemas con el Bluetooth</string>
    <string name="tvBluetoothNoDisponible">El Bluetooth no esta disponible en este dispositivo android</string>
    <string name="tvBluetoothDesactivado">El Bluetooth se encuentra apagado por favor enciendalo</string>
    <string name="tvBluetoothLocalizacionConcesion">Los permisos necesarios de localizacion no fueron concedidos</string>
    <string name="tvBluetoothLocalizacionApagado">La ubicación esta desactivada</string>
    <string name="tvBluetoothLocalizacionTitule">Problemas con la ubicación</string>
    <string name="btnConectar">Seleccionar</string>
    <string name="tvDialogTitle">Exportar: </string>
    <string name="btnPhone">Movil</string>
    <string name="btnOtro">Otro</string>
    <string name="btnOptional">Más datos</string>
    <string name="wrongInputMessage">Has dejado algún campo obligatorio sin rellenar</string>
    <string name="wrongInputTitulo">Faltan Datos</string>
    <string name="btnDeleteAll">Limpiar base de datos</string>
    <string name="dangerTitle">Peligro</string>
    <string name="dangerMessage">¿Estás seguro de borrar la base de datos? Una vez hecho no habrá vuelta atras.</string>
    <string name="btnCancel">Cancelar</string>
    <string name="tvEmptyDatabase">No hay registros de avistamientos.</string>
    <string name="btnNewTransect">Nuevo transecto </string>
    <string name="tvTransectListTitle">Transectos guardados:</string>
    <string name="etTransectName">Nombre del transecto</string>
    <string name="etAnimalsList">Animales (separar con \",\")</string>
    <string name="etLocalidad">Localidad</string>
    <string name="btnCreateTransect">Guardar Transecto</string>
    <string name="alertTitleTransect">Faltan datos</string>
    <string name="alertMessageTransect">El nombre del transecto y el país es obligatorio</string>
    <string name="etNotes">Notas</string>
    <string name="btnCamera">Camara</string>
    <string name="tvTitlePhoto">Fotografía guardada en:</string>
    <string name="menuExit">Salir del transecto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvAnimalsSearched">Animales:</string>
    <string name="tvCountry">País:</string>
    <string name="tvProvincia">Provincia:</string>
    <string name="tvTransectName">Nombre:</string>
    <string name="goBackNotSaving">¿Esta seguro de salir sin guardar?</string>
    <string name="stayEdit">Quedarse</string>
    <string name="exitEdit">Salir</string>
    <string name="btnAñadido">Añadido</string>
    <string name="btnConected">Conectado</string>
    <string name="btnNotConected">No conectado</string>
    <string name="etAltitudeSample">" Altitud del primer avistamiento (m)"</string>
    <string name="etAltitudeNow"> Tu altitud actual (m)</string>
    <string name="titleAltitude">Altitud del primer avistamiento vacia</string>
    <string name="messageAltitude">Ten en cuenta que al no introducir la altitud del primer avistamiento, no se utilizará en el primer avistamiento con lo que no se podrá estimar las altitudes más adelante</string>
    <string name="btnReturn">Volver</string>
    <string name="btnContinue">Continuar</string>
    <string name="menuAltitude">Establecer muestra de altura</string>
    <string name="btnChangePressure">Medir presion y guardar</string>
    <string name="btnDeactivatePressureEstimation">Desactivar estimación por presión</string>
    <string name="etNearestPlace">Lugar más cercano</string>
    <string name="seaLevelPressureAcronym">PNM</string>
    <string name="alertDialogMissingMicrocontollerTitle">Problemas con el microcontrolador</string>
    <string name="alertDialogMissingMicrocontollerMessage">El microcontrolador no esta conectado, para usar esta funcionalidad es necesario</string>
    <string name="btnDeactivateAltitudeEstimation">No establecer </string>
    <string name="etNextSample">Altura de siguiente avistamiento (m)</string>
    <string name="menuNextAltitude">Establecer siguiente altitud</string>
    <string name="btnDelete">Borrar</string>
    <string name="btnSave">Guardar</string>
    <string name="dialogDeleteMessage">¿Estás seguro de querer eliminarlo?</string>
</resources>